Fixed padding for aligned and captioned images

--- a/less/content.less
+++ b/less/content.less
@@ -110,6 +110,13 @@ header .post-format:hover span {
 .wp-caption.alignright {
 	max-width: 50%;
 	margin: 0 0 30px;
+	padding: 0;
+}
+.wp-caption.alignleft {
+	padding-right: 2px;
+}
+.wp-caption.alignright {
+	padding-left: 2px;
 }
 
 .wp-caption img[class*="wp-image-"] {
